--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nut-tree-fork/nut-js": "^4.2.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
     "inquirer": "^9.2.20",
     "jimp": "^0.22.12",
     "node-webcam": "^0.8.2",
